--- a/app/src/main/res/layout/fragment_games_main.xml
+++ b/app/src/main/res/layout/fragment_games_main.xml
@@ -9,7 +9,7 @@
             android:id="@+id/games_tab_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable"/>
+            app:tabMode="fixed"/>
 
     <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/games_view_pager"
