--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -142,6 +142,12 @@
             android:label="@string/search_movie_nav"
             tools:layout="@layout/fragment_serach_movies" />
 
+    <fragment
+            android:id="@+id/nav_fav_movies"
+            android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.ui.movies.movies_lists.FavoriteMoviesFragment"
+            android:label="@string/fav_movie_nav"
+            tools:layout="@layout/fragment_favorite_movies"/>
+
     <!--TV SHOWS-->
 
     <fragment
