--- a/app/src/main/res/layout/fragment_single_game.xml
+++ b/app/src/main/res/layout/fragment_single_game.xml
@@ -26,6 +26,13 @@
                 android:minHeight="500dp"
                 android:layout_marginTop="@dimen/edit_text_margin"/>
 
+        <Button
+                android:id="@+id/game_fav_button_id"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:background="@drawable/fav_border_ic"
+                android:layout_gravity="center" />
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
