--- a/app/src/main/res/layout/fragment_single_tv_show.xml
+++ b/app/src/main/res/layout/fragment_single_tv_show.xml
@@ -36,6 +36,13 @@
                     android:layout_gravity="center"
                     android:minHeight="500dp" />
 
+        <Button
+                android:id="@+id/tv_fav_button_id"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:background="@drawable/fav_border_ic"
+                android:layout_gravity="center" />
+
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
