--- a/app/src/main/res/layout/free_to_play_screen_shot_item.xml
+++ b/app/src/main/res/layout/free_to_play_screen_shot_item.xml
@@ -7,6 +7,9 @@
     <ImageView
             android:id="@+id/free_to_play_screen_shot"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="match_parent"
+            android:minHeight="350dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"/>
 
 </LinearLayout>
