--- a/app/src/main/res/layout/fragment_single_game.xml
+++ b/app/src/main/res/layout/fragment_single_game.xml
@@ -8,7 +8,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_marginBottom="@dimen/edit_text_margin">
+            android:paddingBottom="@dimen/edit_text_margin"
+            android:paddingStart="@dimen/edit_text_margin"
+            android:paddingEnd="@dimen/edit_text_margin">
 
         <TextView
                 android:id="@+id/single_game_title"
@@ -31,7 +33,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:background="@drawable/fav_border_ic"
-                android:layout_gravity="center" />
+                android:layout_gravity="end" />
 
         <LinearLayout
                 android:layout_width="match_parent"
