--- a/app/src/main/res/layout/fragment_single_tv_show.xml
+++ b/app/src/main/res/layout/fragment_single_tv_show.xml
@@ -7,7 +7,9 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="@dimen/edit_text_margin"
+            android:paddingEnd="@dimen/edit_text_margin">
 
         <TextView
                 android:id="@+id/single_tv_title"
@@ -41,7 +43,7 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:background="@drawable/fav_border_ic"
-                android:layout_gravity="center" />
+                android:layout_gravity="end" />
 
         <LinearLayout
                 android:layout_width="match_parent"
