--- a/app/src/main/res/layout/season_item.xml
+++ b/app/src/main/res/layout/season_item.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingStart="@dimen/edit_text_margin"
+        android:paddingEnd="@dimen/edit_text_margin">
 
     <TextView
             android:id="@+id/season_name"
