--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,101 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-            android:layout_marginTop="@dimen/edit_text_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/the_app_was_made_possible_with_the_help_of"/>
-
-    <LinearLayout
-            android:layout_marginTop="@dimen/edit_text_margin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tmdb"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/edit_text_margin"
-                android:layout_marginEnd="@dimen/edit_text_margin"/>
-
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/tmdb"/>
-
-
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        android:layout_marginBottom="@dimen/about_margin"
-            android:layout_marginTop="@dimen/edit_text_margin"/>
-
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="400dp">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/login_edit_text_margin"
-        android:layout_marginEnd="@dimen/login_edit_text_margin"
-        android:fontFamily="arial"
-        android:letterSpacing="0.05"
-        android:text="@string/about_me"
-        android:textSize="@dimen/text_size_about"
-        android:lineSpacingExtra="4dp"
-        android:ellipsize="start"
-        />
-
-    </ScrollView>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/black"
-        android:layout_marginTop="@dimen/about_margin"/>
-
-    <LinearLayout
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center">
+        android:orientation="vertical"
+        android:padding="@dimen/edit_text_margin">
+
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:src="@mipmap/my_logo_foreground"
+                android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/github_link"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/github_link"
-            app:drawableStartCompat="@drawable/github_ic"
-            android:layout_marginStart="@dimen/about_margin"/>
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="arial"
+                android:letterSpacing="0.05"
+                android:text="@string/about_me"
+                android:textSize="@dimen/text_size_about"
+                android:lineSpacingExtra="4dp"
+                android:ellipsize="start"
+                android:layout_marginTop="@dimen/edit_text_margin"/>
 
-        <TextView
-            android:id="@+id/linkedin_link"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/Linkedin_link"
-            app:drawableStartCompat="@drawable/linkedin_ic" />
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center"
+                android:layout_marginEnd="@dimen/about_margin"
+                android:layout_marginTop="@dimen/edit_text_margin">
 
-        <TextView
-            android:id="@+id/facebook_link"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Facebook_link"
-            app:drawableStartCompat="@drawable/facebook_ic"
-            android:layout_marginEnd="@dimen/about_margin"/>
+            <TextView
+                    android:id="@+id/github_link"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/github_link"
+                    app:drawableStartCompat="@drawable/github_ic" />
+
+            <TextView
+                    android:id="@+id/linkedin_link"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/Linkedin_link"
+                    app:drawableStartCompat="@drawable/linkedin_ic" />
+
+            <TextView
+                    android:id="@+id/facebook_link"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Facebook_link"
+                    app:drawableStartCompat="@drawable/facebook_ic"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</ScrollView>
